Updated user guide on specification of extra Java options